syntax = "proto3";

package api;

import "google/protobuf/any.proto";

option go_package = "github.com/duolacloud/microbase/proto/paginator;paginator";

enum OrderDirection {
  ASC = 0;
  DESC = 1;
}

message OrderSpec {
  string field = 1;
  OrderDirection direction = 2;
}

message PageInfo {
  int64 total = 1;
  bool hasNext = 2;
  bool hasPrevious =3;
  string startCursor = 4;
  string endCursor = 5;
}

message ConnectionQuery {
  bool hasFirst = 1;
  int32 first = 2;
  bool hasLast = 3;
  int32 last = 4;
  bool hasAfter = 5;
  string after = 6;
  bool hasBefore = 7;
  string before = 8;
  bool needTotal = 9;
  repeated string fields = 10;
  string filter = 11;
  repeated OrderSpec orders = 12;
}

message Connection {
  PageInfo pageInfo  = 1;
  int64 total = 2;
  Edge edges = 3;
}

message Edge {
  google.protobuf.Any node = 1;
  string cursor = 2;
}